--- a/SistemaJogoDaVelha/wwwroot/css/site.css
+++ b/SistemaJogoDaVelha/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.casa {
+    width: 150px;
+    height: 150px;
+    background-repeat: no-repeat;
+    background-size: 150px 150px;
+}
+
+@media only screen and (max-width: 600px){
+    .casa {
+        width: 100px;
+        height: 100px;
+        background-repeat: no-repeat;
+        background-size: 100px 100px;
+    }
+}
