--- a/SistemaJogoDaVelha/Pages/Index.cshtml
+++ b/SistemaJogoDaVelha/Pages/Index.cshtml
@@ -42,6 +42,32 @@
                 <a href="#" onclick="entrarSala(1)" class="card-link">Entrar</a>
                 <a href="#" onclick="spamGroup(1)" class="card-link">Notificar</a>
             </div>
+
+            <div class="card border-success">
+                <div class="card-body border-success">
+                    <h5>Sala 2</h5>
+                    <p class="card-text">Jogadores</p>
+                    <ol id="sala2-jogadores">
+                    </ol>
+                </div>
+            </div>
+            <div class="card-footer border-success">
+                <a href="#" onclick="entrarSala(2)" class="card-link">Entrar</a>
+                <a href="#" onclick="spamGroup(2)" class="card-link">Notificar</a>
+            </div>
+
+            <div class="card border-success">
+                <div class="card-body border-success">
+                    <h5>Sala 3</h5>
+                    <p class="card-text">Jogadores</p>
+                    <ol id="sala3-jogadores">
+                    </ol>
+                </div>
+            </div>
+            <div class="card-footer border-success">
+                <a href="#" onclick="entrarSala(3)" class="card-link">Entrar</a>
+                <a href="#" onclick="spamGroup(3)" class="card-link">Notificar</a>
+            </div>
         </div>
 
         <div class="w-50 pl-4" id="div-jogo" style="visibility:hidden">
